Cleaned up some code and added number verification for the input fields.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>Credit_calculator.html</welcome-file>
+    <welcome-file>credit-calculator.html</welcome-file>
   </welcome-file-list>
 
   <servlet>
